--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-        
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <!-- Шапка -->
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="header-logo">WebStudio</a>
+            <a href="./index.html" class="header-logo">Web<span class="logo">Studio</span></a>
         
             <ul class="header-list list">
                 <li class="header-item"><a class="header-link link" href="">Studio</a></li>
