--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 <!-- Шапка -->
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="header-logo">Web<span class="logo">Studio</span></a>
+            <a href="./index.html" class="logo">Web<span class="logos">Studio</span></a>
         
             <ul class="header-list list">
-                <li class="header-item"><a class="header-link link" href="">Studio</a></li>
-                <li class="header-item"><a class="header-link link" href="">Portfolio</a></li>
-                <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
+                <li><a class="header-list link" href="">Studio</a></li>
+                <li><a class="header-list link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="header-list link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="address">
             <ul class="address-list list">
-                <li class="address-item"><a class="address-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="address-item"><a class="address-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="address-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="address-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
         
