--- a/portfolio.html
+++ b/portfolio.html
@@ -38,42 +38,42 @@
                 <button type="button">Marketing</button>
             <ul>
                 <li>
-                    <img src="" alt="" width="" height=""/>
-                    <h2></h2>
-                    <p></p>
+                    <img src="./styles.css/images/img1.jpg" alt="" width="360" height="300"/>
+                    <h2>Banking App Interface Concept</h2>
+                    <p>App</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="" />
-                    <h2></h2>
-                    <p></p>
+                    <img src="./styles.css/images/img2.jpg" alt="" width="360" height="300" />
+                    <h2>Cashless Payment</h2>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="" />
-                    <h2></h2>
-                    <p></p>
+                    <img src="./styles.css/images/img3.jpg" alt="" width="360" height="300" />
+                    <h2>Meditaion App</h2>
+                    <p>App</p>
                     </li>
                 <li>
-                    <img src="" alt="" width="" height="" />
+                    <img src="" alt="" width="360" height="300" />
                     <h2></h2>
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="" />
+                    <img src="" alt="" width="360" height="300" />
                     <h2></h2>
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="" />
+                    <img src="" alt="" width="360" height="300" />
                     <h2></h2>
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="" />
+                    <img src="" alt="" width="360" height="300" />
                     <h2></h2>
                     <p></p>
                 </li>
                 <li>
-                    <img src="" alt="" width="" height="" />
+                    <img src="" alt="" width="360" height="300" />
                     <h2></h2>
                     <p></p>
                 </li>
@@ -84,7 +84,7 @@
                 </li>
             
             </ul>
-                
+
         </section>
     </main>
     <footer>
