--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -16,8 +20,8 @@
             <a href="./index.html" class="logo">Web<span class="logos">Studio</span></a>
     
             <ul class="header-list list">
-                <li><a class="header-list link" href="">Studio</a></li>
-                <li><a class="header-list link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="header-list link" href="./index.html">Studio</a></li>
+                <li><a class="header-list link" href="">Portfolio</a></li>
                 <li><a class="header-list link" href="">Contacts</a></li>
             </ul>
         </nav>
