--- a/index.html
+++ b/index.html
@@ -31,50 +31,51 @@
                 <li><a class="address-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-        
-        <!-- Герой -->
         </header>
-        <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
+
+        <!-- HERO -->
+
+        <main class="hero">
+        <section class="hero-section">
+            <h1 class="hero-subject">Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
             
-        <!-- Секция под героем -->
-        <section>
+        <!-- SECTION -->
+        <section class="section">
             <h2>Our capabilities</h2>
-            <ul>
+            <ul class="feature-list">
                 <li>
-                    <h3>Strategy</h3>
-                    <p>
+                    <h3 class="title">Strategy</h3>
+                    <p class="subtitle">
                         Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>
+                    <h3 class="title">Punctuality</h3>
+                    <p class="subtitle">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>
+                    <h3 class="title">Diligence</h3>
+                    <p class="subtitle">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>
+                    <h3 class="title">Technologies</h3>
+                    <p class="subtitle">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
-        <!-- Секция с изображениями-->
-        <section>
-            <h2>What are we doing</h2>
+        <!-- IMAGES-->
+        <section class="section">
+            <h2 class="section-images">What are we doing</h2>
             <ul>
                 <li>
                     <img src="./images/Rectangle712.jpg" alt="computer" width="360" height="300" />
@@ -87,36 +88,37 @@
                 </li>   
             </ul>
         </section>
-        <!-- Наша команда -->
-        <section>
-            <h2>Our Team</h2>
+        <!-- OUR TEAM -->
+        <section class="section">
+            <h2 class="section-title">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/imgteam1.jpg" alt="Employee image" width="264" height="260" />
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="title">Mark Guerrero</h3>
+                    <p class="subtitle">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/imgteam2.jpg" alt="Employee image" width="264" height="260" />
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="title">Tom Ford</h3>
+                    <p class="subtitle">Frontend Developer</p>
                 </li>   
                 <li>
                     <img src="./images/imgteam3.jpg" alt="Employee image" width="264" height="260" />
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="title">Camila Garcia</h3>
+                    <p class="subtitle">Marketing</p>
                 </li>    
                 <li>
                     <img src="./images/imgteam4.jpg" alt="Employee image" width="264" height="260" />
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="title">Daniel Wilson</h3>
+                    <p class="subtitle">UI Designer</p>
                 </li>    
             </ul>
         </section>
     </main>
-    <footer>
+    <!-- FOOTER -->
+    <footer class="footer">
         <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
+        <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
     </footer>     
 </body>
 
