--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -32,6 +32,7 @@
             </ul>
         </address>
     </header>
+    <!-- SEKTION BUTTON -->
     <main>
         <section>
             <h1>Navigation</h1>
@@ -91,9 +92,9 @@
 
         </section>
     </main>
-    <footer>
+    <footer class="footer">
             <a href="./index.html">WebStudio</a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 
