--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
             </ul>
         </section>
         <!-- OUR TEAM -->
-        <section class="section">
+        <section class="section-team">
             <h2 class="section-title">Our Team</h2>
-            <ul>
+            <ul class="team">
                 <li>
                     <img src="./images/imgteam1.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Mark Guerrero</h3>
