--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                 <button type="button">App</button>
                 <button type="button">Design</button>
                 <button type="button">Marketing</button>
-            <ul>
+            <ul class="">
                 <li>
                     <img src="./styles.css/images/img1.jpg" alt="" width="360" height="300"/>
                     <h2>Banking App Interface Concept</h2>
