--- a/portfolio.html
+++ b/portfolio.html
@@ -41,51 +41,53 @@
                 <button type="button">App</button>
                 <button type="button">Design</button>
                 <button type="button">Marketing</button>
-            <ul class="">
+
+                <!-- WORK -->
+            <ul class="work">
                 <li>
                     <img src="./styles.css/images/img1.jpg" alt="" width="360" height="300"/>
-                    <h2>Banking App Interface Concept</h2>
-                    <p>App</p>
+                    <h2 class="title">Banking App Interface Concept</h2>
+                    <p class="subtitle">App</p>
                 </li>
                 <li>
                     <img src="./styles.css/images/img2.jpg" alt="" width="360" height="300" />
-                    <h2>Cashless Payment</h2>
-                    <p>Marketing</p>
+                    <h2 class="title">Cashless Payment</h2>
+                    <p class="subtitle">Marketing</p>
                 </li>
                 <li>
                     <img src="./styles.css/images/img3.jpg" alt="" width="360" height="300" />
-                    <h2>Meditaion App</h2>
-                    <p>App</p>
+                    <h2 class="title">Meditaion App</h2>
+                    <p class="subtitle">App</p>
                     </li>
                 <li>
                     <img src="./styles.css/images/img4.jpg" alt="" width="360" height="300" />
-                    <h2>Taxi Service</h2>
-                    <p>Marketing</p>
+                    <h2 class="title">Taxi Service</h2>
+                    <p class="subtitle">Marketing</p>
                 </li>
                 <li>
                     <img src="./styles.css/images/img5.jpg" alt="" width="360" height="300" />
-                    <h2>Screen Illustrations</h2>
-                    <p>Design</p>
+                    <h2 class="title">Screen Illustrations</h2>
+                    <p class="subtitle">Design</p>
                 </li>
                 <li>
                     <img src="./styles.css/images/img6.jpg" alt="" width="360" height="300" />
-                    <h2>Online Courses</h2>
-                    <p>Marketing</p>
+                    <h2 class="title">Online Courses</h2>
+                    <p class="subtitle">Marketing</p>
                 </li>
                 <li>
                     <img src="./styles.css/images/img7.jpg" alt="" width="360" height="300" />
-                    <h2>Instagram Stories Concept</h2>
-                    <p>Design</p>
+                    <h2 class="title">Instagram Stories Concept</h2>
+                    <p class="subtitle">Design</p>
                 </li>
                 <li>
                     <img src="./styles.css/images/img8.jpg" alt="" width="360" height="300" />
-                    <h2>Organic Food</h2>
-                    <p>Web Site</p>
+                    <h2 class="title">Organic Food</h2>
+                    <p class="subtitle">Web Site</p>
                 </li>
                 <li>
                     <img src="./styles.css/images/img9.jpg" alt="" width="360" height="300" />
-                    <h2>Fresh Coffee</h2>
-                    <p>Web Site</p>
+                    <h2 class="title">Fresh Coffee</h2>
+                    <p class="subtitle">Web Site</p>
                 </li>
             
             </ul>
@@ -93,7 +95,7 @@
         </section>
     </main>
     <footer class="footer">
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html" class="stile">WebStudio</a>
             <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
