--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="stile">WebStudio</a>
         <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
     </footer>     
 </body>
