--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="./index.html" class="logo">Web<span class="logos">Studio</span></a>
         
             <ul class="header-list list">
-                <li><a class="header-list link" href="">Studio</a></li>
+                <li><a class="header-list link" href="./index.html">Studio</a></li>
                 <li><a class="header-list link" href="./portfolio.html">Portfolio</a></li>
                 <li><a class="header-list link" href="">Contacts</a></li>
             </ul>
@@ -38,13 +38,13 @@
         <main class="hero">
         <section class="hero-section">
             <h1 class="hero-subject">Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" class="hero-btn">Order Service</button>
         </section>
             
         <!-- SECTION -->
         <section class="section">
             <h2>Our capabilities</h2>
-            <ul class="feature-list">
+            <ul class="feature-list list">
                 <li>
                     <h3 class="title">Strategy</h3>
                     <p class="subtitle">
@@ -76,7 +76,7 @@
         <!-- IMAGES-->
         <section class="section">
             <h2 class="section-images">What are we doing</h2>
-            <ul>
+            <ul class="section list">
                 <li>
                     <img src="./images/Rectangle712.jpg" alt="computer" width="360" height="300" />
                 </li>
