--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     
             <ul class="header-list list">
                 <li><a class="header-list link" href="./index.html">Studio</a></li>
-                <li><a class="header-list link" href="">Portfolio</a></li>
+                <li><a class="header-list link" href="./portfolio.html">Portfolio</a></li>
                 <li><a class="header-list link" href="">Contacts</a></li>
             </ul>
         </nav>
@@ -32,18 +32,27 @@
             </ul>
         </address>
     </header>
-    <!-- SEKTION BUTTON -->
-    <main>
-        <section>
-            <h1>Navigation</h1>
-                <button type="button">All</button>
-                <button type="button">Web Site</button>
-                <button type="button">App</button>
-                <button type="button">Design</button>
-                <button type="button">Marketing</button>
+    <!-- SECTION BUTTON META-->
+    <main class="meta">
+        <section class="meta-section list">
+            <h1 hidden class="hidden-navigation">Navigation</h1>
+            <ul class="meta-list">
+                <li>
+                    <button type="button" class="btn">Web Site</button>
+                </li>
+                <li>
+                    <button type="button" class="btn">App</button>
+                </li>
+                <li>
+                    <button type="button" class="btn">Design</button>
+                </li>
+                <li>
+                    <button type="button" class="btn">Marketing</button>
+                </li>
+            </ul>
 
                 <!-- WORK -->
-            <ul class="work">
+            <ul class="work-list">
                 <li>
                     <img src="./styles.css/images/img1.jpg" alt="" width="360" height="300"/>
                     <h2 class="title">Banking App Interface Concept</h2>
