--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!-- OUR TEAM -->
         <section class="section-team">
             <h2 class="section-title">Our Team</h2>
-            <ul class="team">
+            <ul class="team-list list">
                 <li>
                     <img src="./images/imgteam1.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Mark Guerrero</h3>
@@ -117,7 +117,7 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-        <a href="./index.html" class="stile">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span class="logos">Studio</span></a>
         <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
     </footer>     
 </body>
