--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="logo">Web<span class="logos">Studio</span></a>
+            <a href="./index.html" class="logo link">Web<span class="logos link">Studio</span></a>
     
             <ul class="header-list list">
                 <li><a class="header-list link" href="./index.html">Studio</a></li>
@@ -104,7 +104,7 @@
         </section>
     </main>
     <footer class="footer">
-            <a href="./index.html" class="stile">WebStudio</a>
+            <a href="./index.html" class="logo link">Web<span class="logos link">Studio</span></a>
             <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
