--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     <main class="meta">
         <section class="meta-section list">
             <h1 hidden class="hidden-navigation">Navigation</h1>
-            <ul class="meta-list">
+            <ul class="meta-list btn">
                 <li>
                     <button type="button" class="btn">Web Site</button>
                 </li>
