--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,12 @@
     </header>
     <!-- SECTION BUTTON META-->
     <main class="meta">
-        <section class="meta-section list">
+        <section class="meta-section">
             <h1 hidden class="hidden-navigation">Navigation</h1>
-            <ul class="meta-list btn">
+            <ul class="meta-btn list">
+                <li>
+                    <button type="button" class="btn">All</button>
+                </li>
                 <li>
                     <button type="button" class="btn">Web Site</button>
                 </li>
@@ -52,49 +55,49 @@
             </ul>
 
                 <!-- WORK -->
-            <ul class="work-list">
+            <ul class="work-list link">
                 <li>
-                    <img src="./styles.css/images/img1.jpg" alt="" width="360" height="300"/>
-                    <h2 class="title">Banking App Interface Concept</h2>
-                    <p class="subtitle">App</p>
+                    <img src="./styles.css/images/img1.jpg" alt="Work example" width="360" height="300"/>
+                    <h2 class="title-link">Banking App Interface Concept</h2>
+                    <p class="subtitle-link">App</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img2.jpg" alt="" width="360" height="300" />
+                    <img src="./styles.css/images/img2.jpg" alt="Work example" width="360" height="300" />
                     <h2 class="title">Cashless Payment</h2>
                     <p class="subtitle">Marketing</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img3.jpg" alt="" width="360" height="300" />
+                    <img src="./styles.css/images/img3.jpg" alt="Work example" width="360" height="300" />
                     <h2 class="title">Meditaion App</h2>
                     <p class="subtitle">App</p>
                     </li>
                 <li>
-                    <img src="./styles.css/images/img4.jpg" alt="" width="360" height="300" />
+                    <img src="./styles.css/images/img4.jpg" alt="Work example" width="360" height="300" />
                     <h2 class="title">Taxi Service</h2>
                     <p class="subtitle">Marketing</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img5.jpg" alt="" width="360" height="300" />
+                    <img src="./styles.css/images/img5.jpg" alt="Work example" width="360" height="300" />
                     <h2 class="title">Screen Illustrations</h2>
                     <p class="subtitle">Design</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img6.jpg" alt="" width="360" height="300" />
+                    <img src="./styles.css/images/img6.jpg" alt="Work example" width="360" height="300" />
                     <h2 class="title">Online Courses</h2>
                     <p class="subtitle">Marketing</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img7.jpg" alt="" width="360" height="300" />
+                    <img src="./styles.css/images/img7.jpg" alt="Work example" width="360" height="300" />
                     <h2 class="title">Instagram Stories Concept</h2>
                     <p class="subtitle">Design</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img8.jpg" alt="" width="360" height="300" />
+                    <img src="./styles.css/images/img8.jpg" alt="Work example" width="360" height="300" />
                     <h2 class="title">Organic Food</h2>
                     <p class="subtitle">Web Site</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img9.jpg" alt="" width="360" height="300" />
+                    <img src="./styles.css/images/img9.jpg" alt="Work example" width="360" height="300" />
                     <h2 class="title">Fresh Coffee</h2>
                     <p class="subtitle">Web Site</p>
                 </li>
