--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             
         <!-- SECTION -->
         <section class="section">
-            <h2>Our capabilities</h2>
+            <h2 hidden class="hidden-opportunity">Opportunity</h2>
             <ul class="feature-list list">
                 <li>
                     <h3 class="title">Strategy</h3>
