--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!-- OUR TEAM -->
         <section class="section-team">
             <h2 class="section-title">Our Team</h2>
-            <ul class="team-list list">
+            <ul class="team-list">
                 <li>
                     <img src="./images/imgteam1.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Mark Guerrero</h3>
