--- a/portfolio.html
+++ b/portfolio.html
@@ -56,50 +56,50 @@
 
                 <!-- WORK -->
             <ul class="work list">
-                <li class="link">
-                    <img src="./css/styles.css" alt="Work" width="360" height="300"/>
+                <li>
+                    <img src="./images/img1.jpg" alt="Work" width="360" height="300"/>
                     <h2 class="title-link">Banking App Interface Concept</h2>
                     <p class="subtitle-link">App</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img2.jpg" alt="Work" width="360" height="300" />
-                    <h2 class="title">Cashless Payment</h2>
-                    <p class="subtitle">Marketing</p>
+                    <img src="./images/img2.jpg" alt="Work" width="360" height="300" />
+                    <h2 class="title-link">Cashless Payment</h2>
+                    <p class="subtitle-link">Marketing</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img3.jpg" alt="Work" width="360" height="300" />
-                    <h2 class="title">Meditaion App</h2>
-                    <p class="subtitle">App</p>
+                    <img src="./images/img3.jpg" alt="Work" width="360" height="300" />
+                    <h2 class="title-link">Meditaion App</h2>
+                    <p class="subtitle-link">App</p>
                     </li>
                 <li>
-                    <img src="./styles.css/images/img4.jpg" alt="Work" width="360" height="300" />
-                    <h2 class="title">Taxi Service</h2>
-                    <p class="subtitle">Marketing</p>
+                    <img src="./images/img4.jpg" alt="Work" width="360" height="300" />
+                    <h2 class="title-link">Taxi Service</h2>
+                    <p class="subtitle-link">Marketing</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img5.jpg" alt="Work" width="360" height="300" />
-                    <h2 class="title">Screen Illustrations</h2>
-                    <p class="subtitle">Design</p>
+                    <img src="./images/img5.jpg" alt="Work" width="360" height="300" />
+                    <h2 class="title-link">Screen Illustrations</h2>
+                    <p class="subtitle-link">Design</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img6.jpg" alt="Work" width="360" height="300" />
-                    <h2 class="title">Online Courses</h2>
-                    <p class="subtitle">Marketing</p>
+                    <img src="./images/img6.jpg" alt="Work" width="360" height="300" />
+                    <h2 class="title-link">Online Courses</h2>
+                    <p class="subtitle-link">Marketing</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img7.jpg" alt="Work" width="360" height="300" />
-                    <h2 class="title">Instagram Stories Concept</h2>
-                    <p class="subtitle">Design</p>
+                    <img src="./images/img7.jpg" alt="Work" width="360" height="300" />
+                    <h2 class="title-link">Instagram Stories Concept</h2>
+                    <p class="subtitle-link">Design</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img8.jpg" alt="Work" width="360" height="300" />
+                    <img src="./images/img8.jpg" alt="Work" width="360" height="300" />
                     <h2 class="title">Organic Food</h2>
-                    <p class="subtitle">Web Site</p>
+                    <p class="subtitle-link">Web Site</p>
                 </li>
                 <li>
-                    <img src="./styles.css/images/img9.jpg" alt="Work" width="360" height="300" />
-                    <h2 class="title">Fresh Coffee</h2>
-                    <p class="subtitle">Web Site</p>
+                    <img src="./images/img9.jpg" alt="Work" width="360" height="300" />
+                    <h2 class="title-link">Fresh Coffee</h2>
+                    <p class="subtitle-link">Web Site</p>
                 </li>
             
             </ul>
