--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 
                 <!-- WORK -->
             <ul class="work list">
-                <li>
+                <li class="link">
                     <img src="./images/img1.jpg" alt="Work" width="360" height="300"/>
                     <h2 class="title-link">Banking App Interface Concept</h2>
                     <p class="subtitle-link">App</p>
