--- a/portfolio.html
+++ b/portfolio.html
@@ -57,58 +57,58 @@
                 <!-- WORK -->
             <ul class="work list">
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/img1.jpg" alt="Work" width="360" height="300"/>
                     <h2 class="title-link">Banking App Interface Concept</h2>
-                    <p class="subtitle-link">App</p>
+                    <p class="subtitle-link">App</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/img2.jpg" alt="Work" width="360" height="300" />
                     <h2 class="title-link">Cashless Payment</h2>
-                    <p class="subtitle-link">Marketing</p>
+                    <p class="subtitle-link">Marketing</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/img3.jpg" alt="Work" width="360" height="300" />
                     <h2 class="title-link">Meditaion App</h2>
-                    <p class="subtitle-link">App</p>
+                    <p class="subtitle-link">App</p></a>
                     </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/img4.jpg" alt="Work" width="360" height="300" />
                     <h2 class="title-link">Taxi Service</h2>
-                    <p class="subtitle-link">Marketing</p>
+                    <p class="subtitle-link">Marketing</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/img5.jpg" alt="Work" width="360" height="300" />
                     <h2 class="title-link">Screen Illustrations</h2>
-                    <p class="subtitle-link">Design</p>
+                    <p class="subtitle-link">Design</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/img6.jpg" alt="Work" width="360" height="300" />
                     <h2 class="title-link">Online Courses</h2>
-                    <p class="subtitle-link">Marketing</p>
+                    <p class="subtitle-link">Marketing</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/img7.jpg" alt="Work" width="360" height="300" />
                     <h2 class="title-link">Instagram Stories Concept</h2>
-                    <p class="subtitle-link">Design</p>
+                    <p class="subtitle-link">Design</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/img8.jpg" alt="Work" width="360" height="300" />
                     <h2 class="title">Organic Food</h2>
-                    <p class="subtitle-link">Web Site</p>
+                    <p class="subtitle-link">Web Site</p></a>
                 </li>
                 <li>
-                    <a href="" class="link"></a>
+                    <a href="" class="link">
                     <img src="./images/img9.jpg" alt="Work" width="360" height="300" />
                     <h2 class="title-link">Fresh Coffee</h2>
-                    <p class="subtitle-link">Web Site</p>
+                    <p class="subtitle-link">Web Site</p></a>
                 </li>
             
             </ul>
