--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
                 <li>
                     <a href="" class="link">
                     <img src="./images/img8.jpg" alt="Work" width="360" height="300" />
-                    <h2 class="title">Organic Food</h2>
+                    <h2 class="title-link">Organic Food</h2>
                     <p class="subtitle-link">Web Site</p></a>
                 </li>
                 <li>
