--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section class="section-team">
             <h2 class="section-title">Our Team</h2>
             <ul class="team-list list">
-                <li>
+                <li class="team-list link">
                     <img src="./images/imgteam1.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Mark Guerrero</h3>
                     <p class="subtitle">Product Designer</p>
