--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
                     <h3 class="title">Mark Guerrero</h3>
                     <p class="subtitle">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-list link">
                     <img src="./images/imgteam2.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Tom Ford</h3>
                     <p class="subtitle">Frontend Developer</p>
                 </li>   
-                <li>
+                <li class="team-list link">
                     <img src="./images/imgteam3.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Camila Garcia</h3>
                     <p class="subtitle">Marketing</p>
                 </li>    
-                <li>
+                <li class="team-list link">
                     <img src="./images/imgteam4.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Daniel Wilson</h3>
                     <p class="subtitle">UI Designer</p>
