--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
             </ul>
         </section>
         <!-- OUR TEAM -->
-        <section class="section-team">
-            <h2 class="section-title">Our Team</h2>
+        <section class="team">
+            <h2 class="team-titl">Our Team</h2>
             <ul class="team-list list">
-                <li class="team-list link">
+                <li class="team-item">
                     <img src="./images/imgteam1.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Mark Guerrero</h3>
                     <p class="subtitle">Product Designer</p>
                 </li>
-                <li class="team-list link">
+                <li class="team-item">
                     <img src="./images/imgteam2.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Tom Ford</h3>
                     <p class="subtitle">Frontend Developer</p>
                 </li>   
-                <li class="team-list link">
+                <li class="team-item">
                     <img src="./images/imgteam3.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Camila Garcia</h3>
                     <p class="subtitle">Marketing</p>
                 </li>    
-                <li class="team-list link">
+                <li class="team-item">
                     <img src="./images/imgteam4.jpg" alt="Employee image" width="264" height="260" />
                     <h3 class="title">Daniel Wilson</h3>
                     <p class="subtitle">UI Designer</p>
