--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
                 <li>
                     <a href="" class="link">
                     <img src="./images/img3.jpg" alt="Work" width="360" height="300" />
-                    <h2 class="title-link">Meditaion App</h2>
+                    <h2 class="title-link">Meditation App</h2>
                     <p class="subtitle-link">App</p></a>
                     </li>
                 <li>
