--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
         <!-- HERO -->
-    <main>
+    <main class="hero">
         <section class="hero-section">
             <h1 class="hero-subject">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-btn">Order Service</button>
