--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main class="hero">
         <section class="hero-section">
             <h1 class="hero-subject">Effective Solutions for Your Business</h1>
-            <button type="button" class="hero-btn">Order Service</button>
+            <button type="button" class="btn">Order Service</button>
         </section>
             
         <!-- SECTION -->
