--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </nav>
         <address class="address">
             <ul class="address-list list">
-                <li class="address-item list">
-                    <a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="address-item">
+                    <a class="address-mail list" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="address-item list">
-                    <a class="address-tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <li class="address-item">
+                    <a class="address-tel list" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
