--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <address class="address">
             <ul class="address-list list">
                 <li>
-                    <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="address-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="address-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
