--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,12 @@
         </nav>
         <address class="address">
             <ul class="address-list list">
-                <li><a class="address-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="address-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li>
+                    <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a class="address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
             </ul>
         </address>
     </header>
