--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button type="button" class="hero-btn">Order Service</button>
         </section>
             
-        <!-- SECTION -->
+        <!-- SECTION FEATURE-->
         <section class="section">
             <h2 hidden class="hidden-opportunity">Opportunity</h2>
             <ul class="feature-list list">
