--- a/index.html
+++ b/index.html
@@ -45,32 +45,32 @@
         </section>
             
         <!-- SECTION FEATURE-->
-        <section class="section">
+        <section class="section-feature">
             <h2 hidden class="hidden-opportunity">Opportunity</h2>
             <ul class="feature-list list">
                 <li>
-                    <h3 class="title">Strategy</h3>
-                    <p class="subtitle">
+                    <h3 class="feature-title">Strategy</h3>
+                    <p class="feature-subtitle">
                         Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3 class="title">Punctuality</h3>
-                    <p class="subtitle">
+                    <h3 class="feature-title">Punctuality</h3>
+                    <p class="feature-subtitle">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <h3 class="title">Diligence</h3>
-                    <p class="subtitle">
+                    <h3 class="feature-title">Diligence</h3>
+                    <p class="feature-subtitle">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.
                     </p>
                 </li>
                 <li>
-                    <h3 class="title">Technologies</h3>
-                    <p class="subtitle">
+                    <h3 class="feature-title">Technologies</h3>
+                    <p class="feature-subtitle">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
@@ -97,23 +97,23 @@
             <ul class="team-list list">
                 <li class="team-item">
                     <img src="./images/imgteam1.jpg" alt="Employee image" width="264" height="260" />
-                    <h3 class="title">Mark Guerrero</h3>
-                    <p class="subtitle">Product Designer</p>
+                    <h3 class="team-title">Mark Guerrero</h3>
+                    <p class="team-subtitle">Product Designer</p>
                 </li>
                 <li class="team-item">
                     <img src="./images/imgteam2.jpg" alt="Employee image" width="264" height="260" />
-                    <h3 class="title">Tom Ford</h3>
-                    <p class="subtitle">Frontend Developer</p>
+                    <h3 class="team-title">Tom Ford</h3>
+                    <p class="team-subtitle">Frontend Developer</p>
                 </li>   
                 <li class="team-item">
                     <img src="./images/imgteam3.jpg" alt="Employee image" width="264" height="260" />
-                    <h3 class="title">Camila Garcia</h3>
-                    <p class="subtitle">Marketing</p>
+                    <h3 class="team-title">Camila Garcia</h3>
+                    <p class="team-subtitle">Marketing</p>
                 </li>    
                 <li class="team-item">
                     <img src="./images/imgteam4.jpg" alt="Employee image" width="264" height="260" />
-                    <h3 class="title">Daniel Wilson</h3>
-                    <p class="subtitle">UI Designer</p>
+                    <h3 class="team-title">Daniel Wilson</h3>
+                    <p class="team-subtitle">UI Designer</p>
                 </li>    
             </ul>
         </section>
